--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <div class="container">
+        <div><img class="icon" src="geometry.png" alt=""></div>
+        <div class="name leftmargin">Gerson Sanchez</div>
+        <div class="profile leftmargin">Hello! I am a software developer! I can help you build a product, feature or
+            website. Take a
+            look of my works. If you like what you see and have a project you need coded, don?t hesitate and contact me.
+        </div>
+    </div>
+
+</body>
+
+</html>
