--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 <body>
 
     <div class="container">
-        <div><img class="icon" src="geometry.png" alt=""></div>
-        <div class="name leftmargin">Gerson Sanchez</div>
-        <div class="profile leftmargin">Hello! I am a software developer! I can help you build a product, feature or
+        <nav class="navigation">
+            <img class="icon" src="geometry.png" alt="">
+            <img class="menu" src="hamburguer.png" alt="">
+        </nav>
+        <h1 class="name">Hey There. I'm Gerson</h1>
+        <h2 class="title">I am a software developer! </h2>
+        <p class="profile">I can help you build a product, feature or
             website. Take a
-            look of my works. If you like what you see and have a project you need coded, don?t hesitate and contact me.
-        </div>
+            look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.
+        </p>
     </div>
 
 </body>
