--- a/index.html
+++ b/index.html
@@ -11,17 +11,30 @@
 
 <body>
 
-    <div class="container">
-        <nav class="navigation">
-            <img class="icon" src="geometry.png" alt="">
-            <img class="menu" src="hamburguer.png" alt="">
-        </nav>
+        <div class="container">
+        <header>
+            <nav class="navigation">
+                <p>John Doe</p>
+                <img class="menu" src="hamburguer.png" alt="">
+            </nav>
+        </header>
+
         <h1 class="name">Hey There. I'm Gerson</h1>
         <h2 class="title">I am a software developer! </h2>
         <p class="profile">I can help you build a product, feature or
             website. Take a
             look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.
         </p>
+
+        <div class="links">
+            <img src="github.svg" alt="">
+            <img src="Linkedin icon.svg" alt="">
+            <img src="angel list.svg" alt="">
+            <img src="twitter.svg" alt="">
+            <img src="medium.svg" alt="">
+        </div>
+        <img class="image" src="Illustration-header@2x.png" alt="">
+        
     </div>
 
 </body>
