--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Professional Portfolio GERSON SANCHEZ</title>
+
 </head>
 
 <body>
 
-        <div class="container">
+    <div class="container">
         <header>
             <nav class="navigation">
                 <p>John Doe</p>
@@ -20,21 +21,23 @@
         </header>
 
         <h1 class="name">Hey There. I'm Gerson</h1>
-        <h2 class="title">I am a software developer! </h2>
+        <h2 class="title">I am a software developer </h2>
         <p class="profile">I can help you build a product, feature or
             website. Take a
             look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.
         </p>
 
-        <div class="links">
-            <img src="github.svg" alt="">
-            <img src="Linkedin icon.svg" alt="">
-            <img src="angel list.svg" alt="">
-            <img src="twitter.svg" alt="">
-            <img src="medium.svg" alt="">
+        <div class="divlink">
+            <div class="links">
+                <a href="https://github.com/gealsanchez"><img src="github.svg" alt=""></a>
+                <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="Linkedin icon.svg" alt=""></a>
+                <a href="https://angel.co/"><img src="angel list.svg" alt=""></a>
+                <a href="https://twitter.com/gealsanchez"><img src="twitter.svg" alt=""></a>
+                <a href="https://medium.com/tag/javascript"><img src="medium.svg" alt=""></a>
+            </div>
+            <img class="image" src="Illustration-header.svg" alt="">
         </div>
-        <img class="image" src="Illustration-header@2x.png" alt="">
-        
+
     </div>
 
 </body>
