Update index.html WORKS , LIST , PROJECT , ABOUT , LANGFRAMSKILLS CLASSES WERE CREATED for each section of the mobile version

--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
     <div class="container">
         <header>
             <nav class="navigation">
-                <p>John Doe</p>
+                <p class="colortitle frobo">John Doe</p>
                 <img class="menu" src="hamburguer.png" alt="">
             </nav>
         </header>
 
-        <h1 class="name">Hey There. I'm Gerson</h1>
-        <h2 class="title">I am a software developer </h2>
-        <p class="profile">I can help you build a product, feature or
-            website. Take a
-            look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.
-        </p>
+        <h1 class="name colorname sizetitle fcrete">Hey There. I'm Gerson</h1>
+        <h2 class="colortitle frobo">I am a software developer </h2>
+
+        <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/">
+            <p class="profile colortitle fpopi para">I can help you build a product, feature or
+                website. Take a
+                look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact
+                me.
+            </p>
+        </a>
+
 
         <div class="divlink">
             <div class="links">
@@ -35,9 +40,110 @@
                 <a href="https://twitter.com/gealsanchez"><img src="twitter.svg" alt=""></a>
                 <a href="https://medium.com/tag/javascript"><img src="medium.svg" alt=""></a>
             </div>
-            <img class="image" src="Illustration-header.svg" alt="">
+
         </div>
 
+        <div class="works">
+
+            <h1 class="colorbtitle stitlewh fcrete">My Recent Works</h1>
+            <hr class="rule">
+            <img class="imgworks" src="Img Placeholder.png" alt="">
+            <h2 class="colorbtitle fcrete stitlebl">Multi-Post Stories</h2>
+            <p class="profile colorbtitle fpopi">A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
+            </p>
+
+            <div>
+                <ul class="list">
+                    <a href="https://medium.com/tag/html">
+                    <li class="button buttoncolorsa finte">html</li></a>
+                    <a href="https://medium.com/tag/css">
+                    <li class="button buttoncolorsa finte">css</li></a>
+                    <a href="https://medium.com/tag/bootstrap">
+                    <li class="button buttoncolorsa finte">bootstrap</li></a>
+                    <a href="https://medium.com/tag/ruby-on-rails">
+                    <li class="button buttoncolorsa finte">Ruby</li></a>
+                </ul>
+            </div>
+            <a href="https://gealsanchez.github.io/LandingPage/"><button class="buttoncolorsb finte">See
+                    Project</button></a>
+        </div>
+
+        <div class="project">
+
+            <h1 class="colortitle fcrete">Profesional Art Printing Data</h1>
+            <p class="colorprofile fpopi marginl">A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard
+            </p>
+
+            <ul class="list">
+                <a href="https://medium.com/tag/html">
+                    <li class="button buttoncolorsc finte">html</li>
+                </a>
+                <a href="https://medium.com/tag/bootstrap">
+                    <li class="button buttoncolorsc finte">bootstrap</li>
+                </a>
+                <a href="https://medium.com/tag/ruby-on-rails">
+                    <li class="button buttoncolorsc finte">Ruby</li>
+                </a>
+            </ul>
+
+        </div>
+        <a href="https://gealsanchez.github.io/LandingPage/"><button class="buttoncolorsd finte">See
+                Project</button></a>
+
+
+        <div class="about">
+            <h1 class="nameabout colorname fcrete">About Me</h1>
+            <p class="profile colortitle finte">I can help you build a product, feature or
+                website. Take a
+                look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact
+                me.
+            </p>
+            <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><button class="buttoncolorsb finte">Get my
+                    resume</button></a>
+        </div>
+
+        <div class="langframskills">
+
+            <hr class="ruledown">
+            <div class="center">
+                <p class="finte colortitle center flisttitle"><img class="icon" src="Rectangle 55.png">Languages</p>
+            </div>
+
+            <ul class="finte colortitle fsizelist">
+                <li>Javascript</li>
+                <li>Ruby</li>
+                <li>Html</li>
+                <li>Css</li>
+            </ul>
+            <div class="center">
+
+                <p class="finte colortitle center flisttitle"><img class="icon" src="Rectangle 56.png">
+                    Frameworks</p>
+            </div>
+
+            <ul class="finte colortitle fsizelist">
+                <li>Bootstrap</li>
+                <li>Ruby on Rails</li>
+                <li>RSPec</li>
+                <li>CapyBara</li>
+                <li>Selenium</li>
+            </ul>
+
+            <div class="center">
+                <p class="finte colortitle center flisttitle"><img class="icon" src="Rectangle 57.png">Skills</p>
+            </div>
+
+            <ul class="finte colortitle fsizelist">
+                <li>Codekit</li>
+                <li>Github</li>
+                <li>Codepen</li>
+                <li>Gitlab</li>
+                <li>Terminal</li>
+            </ul>
+        </div>
     </div>
 
 </body>
